/*
 * Copyright (c) 2023 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package protokt.v1;

import "protokt/v1/protokt.proto";

option java_package = "com.toasttab.protokt.v1";
option java_outer_classname = "InetSocketAddressProto";
option (protokt.v1.file).file_descriptor_object_name = "InetSocketAddressProto";

message InetSocketAddress {
  bytes address = 1;
  int32 port = 2;
}
