/*
 * Copyright (c) 2019 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package protokt.v1.testing;

option java_package = "com.toasttab.protokt.v1.testing";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "protokt/v1/inet_socket_address.proto";
import "protokt/v1/protokt.proto";

message Wrappers {
  bytes uuid = 2 [
    (.protokt.v1.property).wrap = "java.util.UUID"
  ];

  bytes ip_address = 3 [
    (.protokt.v1.property).wrap = "java.net.InetAddress"
  ];

  .protokt.v1.InetSocketAddress socket_address = 5 [
    (.protokt.v1.property).wrap = "java.net.InetSocketAddress"
  ];

  google.protobuf.Timestamp instant = 6 [
    (.protokt.v1.property).wrap = "java.time.Instant"
  ];

  google.protobuf.Duration duration = 7 [
    (.protokt.v1.property).wrap = "java.time.Duration"
  ];

  string local_date = 8 [
    (.protokt.v1.property).wrap = "java.time.LocalDate"
  ];

  google.protobuf.BytesValue nullable_uuid = 9 [
    (.protokt.v1.property).wrap = "java.util.UUID"
  ];

  google.protobuf.StringValue nullable_local_date = 10 [
    (.protokt.v1.property).wrap = "java.time.LocalDate"
  ];

  optional bytes optional_uuid = 12 [
    (.protokt.v1.property).wrap = "java.util.UUID"
  ];

  optional bytes optional_ip_address = 13 [
    (.protokt.v1.property).wrap = "java.net.InetAddress"
  ];

  optional string optional_local_date = 14 [
    (.protokt.v1.property).wrap = "java.time.LocalDate"
  ];

  google.protobuf.StringValue optional_string = 15;
}

message OneofWrappers {
  oneof wrapped_oneof {
    bytes uuid_oneof = 2 [
      (.protokt.v1.property).wrap = "java.util.UUID"
    ];

    bytes ip_address_oneof = 3 [
      (.protokt.v1.property).wrap = "java.net.InetAddress"
    ];

    .protokt.v1.InetSocketAddress socket_address_oneof = 5 [
      (.protokt.v1.property).wrap = "java.net.InetSocketAddress"
    ];

    google.protobuf.Timestamp instant_oneof = 6 [
      (.protokt.v1.property).wrap = "java.time.Instant"
    ];

    google.protobuf.Duration duration_oneof = 7 [
      (.protokt.v1.property).wrap = "java.time.Duration"
    ];

    string local_date_oneof = 8 [
      (.protokt.v1.property).wrap = "java.time.LocalDate"
    ];

    google.protobuf.BytesValue nullable_uuid_oneof = 9 [
      (.protokt.v1.property).wrap = "java.util.UUID"
    ];

    google.protobuf.StringValue nullable_local_date_oneof = 10 [
      (.protokt.v1.property).wrap = "java.time.LocalDate"
    ];

    google.protobuf.StringValue optional_string = 11;
  }
}

message RepeatedWrappers {
  repeated bytes uuids = 1 [
    (.protokt.v1.property).wrap = "java.util.UUID"
  ];

  repeated google.protobuf.BytesValue uuids_wrapped = 2 [
    (.protokt.v1.property).wrap = "java.util.UUID"
  ];

  repeated google.protobuf.StringValue strings = 3;
}

message MapWrappers {
  map<string, bytes> map_string_uuid = 7 [
    (.protokt.v1.property).key_wrap = "java.time.LocalDate",
    (.protokt.v1.property).value_wrap = "java.util.UUID"
  ];

  map<string, .protokt.v1.InetSocketAddress> map_string_socket_address = 8 [
    (.protokt.v1.property).key_wrap = "java.time.LocalDate",
    (.protokt.v1.property).value_wrap = "java.net.InetSocketAddress"
  ];

  map<string, google.protobuf.StringValue> map_string_string_value = 9;
}
